# amazon-shopping-mcp

./: README.md  pyproject.toml
src/amazon_mcp/: __main__.py  server.py
